Correct Bootstrap issues on mobiles

--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -8,7 +8,12 @@ hr {
     color: #71726a;
     opacity: 1;
 }
-
+.navbar .collapse.show ul{
+    margin-top: 1rem;
+}
+.navbar .collapse.show li {
+    border-top: 1px solid rgba(255,255,255,0.2);
+}
 .site-navbar-small {
     padding-top: 61px;
 }
